@@ -3,99 +3,154 @@ package com.cdpo.techservice.service;
 import com.cdpo.techservice.dto.*;
 import com.cdpo.techservice.exception.IllegalInputParameters;
 import com.cdpo.techservice.exception.NotFoundException;
+import com.cdpo.techservice.exception.UserNotFoundException;
 import com.cdpo.techservice.mapper.BookingMapper;
 import com.cdpo.techservice.mapper.RevenueMapper;
 import com.cdpo.techservice.model.Booking;
 import com.cdpo.techservice.model.BookingState;
+import com.cdpo.techservice.model.RoleType;
+import com.cdpo.techservice.model.ServiceUser;
 import com.cdpo.techservice.repository.IServiceBookingRepository;
+import com.cdpo.techservice.repository.IServiceUserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Primary
 @Service
 @RequiredArgsConstructor
 public class ServiceBookingService implements IServiceBookingService {
-    private static final String NOT_FOUND = "Booking not found";
     private static final String BOTH_CANNOT_BE_NULL = "From and To both cannot be null";
 
     private final IServiceBookingRepository bookingRepository;
+    private final IServiceUserRepository userRepository;
     private final BookingMapper bookingMapper;
     private final RevenueMapper revenueMapper;
 
     @Override
-    public long createBooking(BookingRequestDTO requestBooking) {
-        return bookingRepository.save(bookingMapper.toEntity(requestBooking)).getId();
+    public long createBooking(BookingRequestDTO requestBooking, String username) {
+        return bookingRepository.save(bookingMapper.toEntity(requestBooking, getUser(username))).getId();
     }
 
     @Override
-    public BookingResponseDTO getBookingById(Long id) {
+    public BookingResponseDTO getBookingById(Long id, String username) {
+        ServiceUser user = getUser(username);
+        Optional<Booking> booking = bookingRepository.findById(id);
+        if(isNotOperator(user)) {
+            booking = booking.filter(b-> b.getUser().getUsername().equals(username));
+        }
+        return booking.map(bookingMapper::toDto).orElseThrow(NotFoundException::new);
+    }
+
+    private BookingResponseDTO getBookingResponseDTO(Long id) {
         return bookingRepository.findById(id)
-                .map(bookingMapper::toDto).orElseThrow(() -> new NotFoundException(NOT_FOUND));
+                .map(bookingMapper::toDto).orElseThrow(NotFoundException::new);
     }
 
     @Override
-    public List<BookingResponseDTO> getAllFilteredBy(BookingStateDTO stateDTO) {
-        List<Booking> bookings = bookingRepository.findByState(BookingState.valueOf(stateDTO.name()));
-        if(bookings.isEmpty()) throw new NotFoundException(NOT_FOUND);
-        return bookings.stream().map(bookingMapper::toDto).collect(Collectors.toList());
+    public List<BookingResponseDTO> getAllFilteredBy(BookingStateDTO stateDTO, String username) {
+        ServiceUser user = getUser(username);
+        Stream<Booking> stream = bookingRepository.findByState(BookingState.valueOf(stateDTO.name())).stream();
+        if (isNotOperator(user)) {
+            stream = stream.filter(booking -> booking.getUser().getUsername().equals(username));
+        }
+        List<BookingResponseDTO> collectedBooking = stream.map(bookingMapper::toDto).collect(Collectors.toList());
+        if(collectedBooking.isEmpty()) throw new NotFoundException();
+        return collectedBooking;
+    }
+
+    private static boolean isNotOperator(ServiceUser user) {
+        return !user.getUserRole().getRoleType().equals(RoleType.ROLE_OPERATOR);
     }
 
     @Override
     public List<BookingResponseDTO> getAllFilteredBy(LocalDateTime time) {
         List<Booking> bookings = bookingRepository.findByAppointmentTime(time);
-        if(bookings.isEmpty()) throw new NotFoundException(NOT_FOUND);
+        if(bookings.isEmpty()) throw new NotFoundException();
         return bookings.stream().map(bookingMapper::toDto).collect(Collectors.toList());
     }
 
     @Override
-    public List<BookingResponseDTO> getAllBookings() {
-        List<Booking> bookings = bookingRepository.findAll();
-        if(bookings.isEmpty()) throw new NotFoundException(NOT_FOUND);
-        return bookings.stream().map(bookingMapper::toDto).collect(Collectors.toList());
+    public List<BookingResponseDTO> getAllBookings(String username) {
+        ServiceUser user = getUser(username);
+        Stream<Booking> bookings = bookingRepository.findAll().stream();
+        if (isNotOperator(user)) {
+            bookings = bookings.filter(booking -> booking.getUser().getUsername().equals(username));
+        }
+        List<BookingResponseDTO> collectedDto = bookings.map(bookingMapper::toDto).toList();
+        if(collectedDto.isEmpty()) throw new NotFoundException();
+        return collectedDto;
     }
 
     @Override
     public void cancelBooking(Long id) {
         if (bookingRepository.updateStateById(BookingState.CANCELLED, id) == 0) {
-            throw new NotFoundException(NOT_FOUND);
+            throw new NotFoundException();
         }
     }
 
     @Override
-    public BookingResponseDTO updateBooking(Long id, BookingUpdateTimeDTO updateDTO) {
+    public BookingResponseDTO updateBooking(Long id, BookingUpdateTimeDTO updateDTO, String username) {
+        ServiceUser user = getUser(username);
+        Optional<Booking> targetBooking = bookingRepository.findById(id);
+        if (targetBooking.isEmpty()
+                || (isNotOperator(user) && !targetBooking.get().getUser().getUsername().equals(username))) {
+            throw new NotFoundException();
+        }
         bookingRepository.updateAppointmentTimeById(updateDTO.appointmentTime(), id);
-        return getBookingById(id);
+        return targetBooking.map(booking -> updAppointmentTimeInDto(updateDTO, booking))
+                .map(bookingMapper::toDto)
+                .orElseThrow(NotFoundException::new);
+    }
+
+    private static Booking updAppointmentTimeInDto(BookingUpdateTimeDTO updateDTO, Booking booking) {
+        booking.setAppointmentTime(updateDTO.appointmentTime());
+        return booking;
     }
 
     @Override
     public BookingResponseDTO updateBooking(Long id, BookingUpdateDiscountDTO updateDTO) {
         bookingRepository.updateDiscountPercentById(updateDTO.discountPercent(), id);
-        return getBookingById(id);
+        return getBookingResponseDTO(id);
     }
 
     @Override
-    public List<BookingResponseDTO> getAllProvidedBookings() {
+    public List<BookingResponseDTO> getAllProvidedBookings(String username) {
         /* Пока статуса DONE нет, поэтому сейчас наглядней по времени */
-        List<Booking> bookings = bookingRepository.findByAppointmentTimeLessThan(LocalDateTime.now());
-        if(bookings.isEmpty()) throw new NotFoundException(NOT_FOUND);
-        return bookings.stream().map(bookingMapper::toDto).collect(Collectors.toList());
+        ServiceUser user = getUser(username);
+        Stream<Booking> bookings = bookingRepository.findByAppointmentTimeLessThan(LocalDateTime.now()).stream();
+        if (isNotOperator(user)) {
+            bookings = bookings.filter(booking -> booking.getUser().getUsername().equals(username));
+        }
+        List<BookingResponseDTO> collectedDto = bookings.map(bookingMapper::toDto).collect(Collectors.toList());
+        if(collectedDto.isEmpty()) throw new NotFoundException();
+        return collectedDto;
     }
 
     @Override
     public List<RevenueDTO> calculateRevenue(LocalDate from, LocalDate to) {
         if(from == null && to == null) throw new IllegalInputParameters(BOTH_CANNOT_BE_NULL);
         List<Booking> bookings = getBookingList(from, to);
-        if (bookings.isEmpty()) throw new NotFoundException(NOT_FOUND);
+        if (bookings.isEmpty()) throw new NotFoundException();
         return calculateRevenues(bookings);
+    }
+
+    @Override
+    public BookingResponseDTO updateBooking(long id, BookingDTO updateDTO) {
+        Booking booking = bookingRepository.findById(id).orElseThrow(NotFoundException::new);
+        ServiceUser user = null;
+        if (updateDTO.username() != null) {
+            user = getUser(updateDTO.username());
+        }
+        Booking merged = bookingMapper.merge(booking, updateDTO, user);
+        bookingRepository.save(merged);
+        return bookingMapper.toDto(merged);
     }
 
     private List<Booking> getBookingList(LocalDate from, LocalDate to) {
@@ -141,5 +196,9 @@ public class ServiceBookingService implements IServiceBookingService {
 
     private static Set<Map.Entry<LocalDate, List<Booking>>> groupByDateEntries(List<Booking> bookings) {
         return bookings.stream().collect(Collectors.groupingBy(booking -> booking.getAppointmentTime().toLocalDate())).entrySet();
+    }
+
+    private ServiceUser getUser(String username) {
+        return userRepository.findByUsername(username).orElseThrow(UserNotFoundException::new);
     }
 }
